// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App - dark/light themes set 1`] = `
<main>
  <div
    className=""
  >
    <div>
      <div
        className="loader"
        style={
          Object {
            "visibility": "visible",
            "zIndex": 999,
          }
        }
      />
      <div
        style={
          Object {
            "cursor": "grab",
            "height": "768px",
            "position": "relative",
            "width": "1024px",
          }
        }
      >
        <div
          style={
            Object {
              "height": "100%",
              "position": "relative",
              "width": "100%",
            }
          }
        >
          <div
            className=""
            style={
              Object {
                "height": "100%",
                "overflow": "hidden",
                "position": "absolute",
                "visibility": "inherit",
                "width": "100%",
              }
            }
          />
          <div
            style={
              Object {
                "height": 0,
                "overflow": "visible",
                "width": 0,
              }
            }
          />
        </div>
      </div>
      <div
        className="side-panel-container"
        style={
          Object {
            "marginLeft": 0,
          }
        }
      >
        <div
          className="side-panel"
          style={
            Object {
              "background": "#242730",
              "color": "white",
            }
          }
        >
          <div
            className="side-pane-header"
            style={
              Object {
                "background": "#29323C",
                "marginTop": 2,
              }
            }
          >
            <h2>
              Nothing to show
            </h2>
          </div>
          <div>
            <button
              className="ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az b0 b1 b2 b3 b4 b5 b6 b7 b8 b9 ba bb bc bd be bf bg bh bi bj bk"
              data-baseweb="button"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
            >
              Add data
            </button>
            <i
              className="fa fa-save"
              onClick={[Function]}
              style={
                Object {
                  "cursor": "pointer",
                  "fontSize": "1.5em",
                  "margin": 5,
                }
              }
            />
          </div>
          <div
            className="side-panel-body"
          >
            <div
              className="side-panel-body-content"
            >
              <br />
              <hr
                style={
                  Object {
                    "clear": "both",
                  }
                }
              />
              <div
                className="bl"
              >
                <div
                  aria-orientation="horizontal"
                  className="bm bn bo af bp bq br bs bt bu"
                  data-baseweb="tab-list"
                  role="tablist"
                >
                  <button
                    aria-controls="tabs-bui1-tabpanel-0"
                    aria-selected={true}
                    className="ax at b1 b3 b2 b4 bv ae ag bw bx by bz ai aj ak al am an ao ap bh c0 au av aw aq c1 ay c2 c3 c4 b5 b6 b7 b8 ah"
                    data-baseweb="tab"
                    disabled={false}
                    id="tabs-bui1-tab-0"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    role="tab"
                    tabIndex="0"
                    type="button"
                  >
                    <i
                      className="fa fa-info"
                      style={
                        Object {
                          "fontSize": "2rem",
                        }
                      }
                    />
                  </button>
                  <button
                    aria-controls="tabs-bui1-tabpanel-1"
                    aria-selected={false}
                    className="ax at b1 b3 b2 b4 bv ae ag bw bx by bz ai aj ak al am an ao ap bh c0 au av aw aq c1 ay c2 c3 c4 b5 b6 b7 b8 ah"
                    data-baseweb="tab"
                    disabled={false}
                    id="tabs-bui1-tab-1"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    role="tab"
                    tabIndex="-1"
                    type="button"
                  >
                    <i
                      className="fa fa-sliders"
                      style={
                        Object {
                          "fontSize": "2rem",
                        }
                      }
                    />
                  </button>
                  <div
                    aria-hidden="true"
                    className="c5 c6 c7 c8 c9 ca cb cc"
                    data-baseweb="tab-highlight"
                    role="presentation"
                  />
                </div>
                <div
                  aria-hidden="true"
                  className="bi bm ca"
                  data-baseweb="tab-border"
                  role="presentation"
                />
                <div
                  aria-labelledby="tabs-bui1-tab-0"
                  className="cd aq"
                  data-baseweb="tab-panel"
                  hidden={false}
                  id="tabs-bui1-tabpanel-0"
                  role="tabpanel"
                >
                  <div
                    className="side-panel-group"
                    style={
                      Object {
                        "borderColor": "#29323C",
                      }
                    }
                  />
                </div>
                <div
                  aria-labelledby="tabs-bui1-tab-1"
                  className="cd aq"
                  data-baseweb="tab-panel"
                  hidden={true}
                  id="tabs-bui1-tabpanel-1"
                  role="tabpanel"
                />
              </div>
            </div>
            <div
              className="space"
            />
            <form
              className="search-form"
              onSubmit={[Function]}
            >
              <div
                className="ce cf"
                data-baseweb="form-control-container"
              >
                <div
                  className="bv bn cg ce ch ci cj ck cl cm cn co cp av cq bb bc b9 ba b5 cr cs ct cu cv cw cx cy cz d0"
                  data-baseweb="input"
                >
                  <div
                    className="bn ce d1 av cq b5 cr cs ct bh cy"
                    data-baseweb="base-input"
                  >
                    <input
                      aria-activedescendant={null}
                      aria-autocomplete={null}
                      aria-controls={null}
                      aria-describedby={null}
                      aria-errormessage={null}
                      aria-haspopup={null}
                      aria-invalid={false}
                      aria-label={null}
                      aria-labelledby={null}
                      aria-required={false}
                      autoComplete="on"
                      className="bv d2 ai ak aj al am ao an ap aq ce d3 d4 d5 d6 bd be d7 d0 b5 cr cs ct bh d8 d9"
                      disabled={false}
                      id="search-nominatum"
                      inputMode="text"
                      name=""
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      onKeyPress={[Function]}
                      onKeyUp={[Function]}
                      pattern={null}
                      placeholder="fly to ..."
                      required={false}
                      role={null}
                      rows={null}
                      type="text"
                    />
                  </div>
                  <div
                    className="bn ag ah da av cq b5 cr cs ct db dc bh cy"
                  >
                    🌐
                  </div>
                </div>
              </div>
            </form>
          </div>
        </div>
        <div
          className="close-button"
          onClick={[Function]}
          style={
            Object {
              "color": "white",
            }
          }
        >
          <div
            style={
              Object {
                "backgroundColor": "#242730",
              }
            }
          >
            <i
              className="fa fa-arrow-circle-left"
              style={
                Object {
                  "color": "white !important",
                  "fontSize": "2rem",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className=""
  />
</main>
`;

exports[`App - dark/light themes set 2`] = `
<main>
  <div
    className=""
  >
    <div>
      <div
        className="loader"
        style={
          Object {
            "visibility": "visible",
            "zIndex": 999,
          }
        }
      />
      <div
        style={
          Object {
            "cursor": "grab",
            "height": "768px",
            "position": "relative",
            "width": "1024px",
          }
        }
      >
        <div
          style={
            Object {
              "height": "100%",
              "position": "relative",
              "width": "100%",
            }
          }
        >
          <div
            className=""
            style={
              Object {
                "height": "100%",
                "overflow": "hidden",
                "position": "absolute",
                "visibility": "inherit",
                "width": "100%",
              }
            }
          />
          <div
            style={
              Object {
                "height": 0,
                "overflow": "visible",
                "width": 0,
              }
            }
          />
        </div>
      </div>
      <div
        className="side-panel-container"
        style={
          Object {
            "marginLeft": 0,
          }
        }
      >
        <div
          className="side-panel"
          style={
            Object {
              "background": "white",
              "color": "black",
            }
          }
        >
          <div
            className="side-pane-header"
            style={
              Object {
                "background": "#eee",
                "marginTop": 2,
              }
            }
          >
            <h2>
              Nothing to show
            </h2>
          </div>
          <div>
            <button
              className="ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay dd de b1 b2 b3 b4 b5 b6 b7 b8 b9 ba bb bc bd be bf bg df dg dh di"
              data-baseweb="button"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
            >
              Add data
            </button>
            <i
              className="fa fa-save"
              onClick={[Function]}
              style={
                Object {
                  "cursor": "pointer",
                  "fontSize": "1.5em",
                  "margin": 5,
                }
              }
            />
          </div>
          <div
            className="side-panel-body"
          >
            <div
              className="side-panel-body-content"
            >
              <br />
              <hr
                style={
                  Object {
                    "clear": "both",
                  }
                }
              />
              <div
                className="bl"
              >
                <div
                  aria-orientation="horizontal"
                  className="bm bn bo af bp bq br bs bt bu"
                  data-baseweb="tab-list"
                  role="tablist"
                >
                  <button
                    aria-controls="tabs-bui1-tabpanel-0"
                    aria-selected={true}
                    className="ax at b1 b3 b2 b4 bv ae ag bw bx by bz ai aj ak al am an ao ap df dj au av aw aq c1 ay de dk c4 b5 b6 b7 b8 ah"
                    data-baseweb="tab"
                    disabled={false}
                    id="tabs-bui1-tab-0"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    role="tab"
                    tabIndex="0"
                    type="button"
                  >
                    <i
                      className="fa fa-info"
                      style={
                        Object {
                          "fontSize": "2rem",
                        }
                      }
                    />
                  </button>
                  <button
                    aria-controls="tabs-bui1-tabpanel-1"
                    aria-selected={false}
                    className="ax at b1 b3 b2 b4 bv ae ag bw bx by bz ai aj ak al am an ao ap df dj au av aw aq c1 ay de dk c4 b5 b6 b7 b8 ah"
                    data-baseweb="tab"
                    disabled={false}
                    id="tabs-bui1-tab-1"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    role="tab"
                    tabIndex="-1"
                    type="button"
                  >
                    <i
                      className="fa fa-sliders"
                      style={
                        Object {
                          "fontSize": "2rem",
                        }
                      }
                    />
                  </button>
                  <div
                    aria-hidden="true"
                    className="dl c6 c7 c8 c9 ca cb cc"
                    data-baseweb="tab-highlight"
                    role="presentation"
                  />
                </div>
                <div
                  aria-hidden="true"
                  className="c5 bm ca"
                  data-baseweb="tab-border"
                  role="presentation"
                />
                <div
                  aria-labelledby="tabs-bui1-tab-0"
                  className="cd aq"
                  data-baseweb="tab-panel"
                  hidden={false}
                  id="tabs-bui1-tabpanel-0"
                  role="tabpanel"
                >
                  <div
                    className="side-panel-group"
                    style={
                      Object {
                        "borderColor": "#eee",
                      }
                    }
                  />
                </div>
                <div
                  aria-labelledby="tabs-bui1-tab-1"
                  className="cd aq"
                  data-baseweb="tab-panel"
                  hidden={true}
                  id="tabs-bui1-tabpanel-1"
                  role="tabpanel"
                />
              </div>
            </div>
            <div
              className="space"
            />
            <form
              className="search-form"
              onSubmit={[Function]}
            >
              <div
                className="ce cf"
                data-baseweb="form-control-container"
              >
                <div
                  className="bv bn cg ce ch ci cj ck cl cm cn co cp av cq bb bc b9 ba b5 cr cs ct dm dn do dp dg cz d0"
                  data-baseweb="input"
                >
                  <div
                    className="bn ce d1 av cq b5 cr cs ct df dg"
                    data-baseweb="base-input"
                  >
                    <input
                      aria-activedescendant={null}
                      aria-autocomplete={null}
                      aria-controls={null}
                      aria-describedby={null}
                      aria-errormessage={null}
                      aria-haspopup={null}
                      aria-invalid={false}
                      aria-label={null}
                      aria-labelledby={null}
                      aria-required={false}
                      autoComplete="on"
                      className="bv d2 ai ak aj al am ao an ap aq ce d3 d4 d5 d6 bd be d7 d0 b5 cr cs ct df dq d9"
                      disabled={false}
                      id="search-nominatum"
                      inputMode="text"
                      name=""
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      onKeyPress={[Function]}
                      onKeyUp={[Function]}
                      pattern={null}
                      placeholder="fly to ..."
                      required={false}
                      role={null}
                      rows={null}
                      type="text"
                    />
                  </div>
                  <div
                    className="bn ag ah da av cq b5 cr cs ct db dc df dg"
                  >
                    🌐
                  </div>
                </div>
              </div>
            </form>
          </div>
        </div>
        <div
          className="close-button"
          onClick={[Function]}
          style={
            Object {
              "color": "white",
            }
          }
        >
          <div
            style={
              Object {
                "backgroundColor": "#242730",
              }
            }
          >
            <i
              className="fa fa-arrow-circle-left"
              style={
                Object {
                  "color": "white !important",
                  "fontSize": "2rem",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className=""
  />
</main>
`;
